samples/_failures_safe/1761472393_5f6721_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_369e4d08.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_369e4d08.c:168:20: error: expected ‘,’ or ‘;’ at end of input
  168 |             struct Token *next = &parser
      |                    ^~~~~
./samples/SAFE/__tmp_369e4d08.c:168:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_369e4d08.c:168:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_369e4d08.c:168:20: error: expected declaration or statement at end of input
